--- a/style.css
+++ b/style.css
@@ -1,19 +1,34 @@
 #grid-container {
     display: flex;
     flex-wrap: wrap;
-    
+    width: 960px;
+    height: 960px;
+    margin: 0 auto;
+    box-sizing: border-box
 }
 
 .gridcell {
-    flex: auto;
-    width: 105px;
-    height: 105px;
+    /* flex: auto; */
+    /* width: 105px;
+    height: 105px; */
     border-style: solid;
     border-color: black;
-    border-width: 5px;
-    /* box-sizing: content-box; */
+    border-width: 1px;
+    /* box-sizing:content-box; */
+    box-sizing: border-box
 }
+
+
 
 .overGrid {
     background-color: red;
+}
+
+
+.change-cells-btn {
+    margin: 50px auto;
+    display: block;
+    padding: 25px 50px;
+    border-radius: 15%;
+    font-weight: bold;
 }
