--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
+h1 {
+    text-align: center;
+
+}
+
+#main-container {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
 #grid-container {
+    
     display: flex;
     flex-wrap: wrap;
     width: 600px;
     height: 600px;
     
+}
+
+/*#grid-controllers {
+    
+}*/
+
+#grid-controllers {
+    
+    /* width: auto;
+    height: 600px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 30px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .gridCell {
@@ -14,3 +44,15 @@
     border-style: solid;
     box-sizing: border-box;
 }
+
+.mode-options {
+    display: flex;
+    gap: 50px;
+}
+
+button {
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+
